Implement hyperlinks in the help viewer
This commit allows you to navigate through help pages by clicking on
hyperlinks in the help viewer.

Note that hyperlinks to external web sites are not supported. I'm not
even sure they should be supported, since the application needs to run
offline.

--- a/src/main/resources/cs2212/mapmaker/help/Mapmaker Help/Example Page 2/index.html
+++ b/src/main/resources/cs2212/mapmaker/help/Mapmaker Help/Example Page 2/index.html
@@ -4,4 +4,4 @@
     accessible from the left sidebar.</p>
 
 <p>You should also be able to access the example subpage via either
-    <a href="Example Subpage.html">this link</a> or the left sidebar.</p>
+    <a href="Example%20Subpage.html">this link</a> or the left sidebar.</p>
