Begin help page writing

--- a/src/main/resources/cs2212/westernmaps/help/Western Maps Help/index.html
+++ b/src/main/resources/cs2212/westernmaps/help/Western Maps Help/index.html
@@ -1,6 +1,6 @@
-<h1>Hello, world!</h1>
+<h1>Welcome to Western Maps!</h1>
 
-<p>Welcome to the help system for Western Maps. This should be replaced
-    by actual help when that gets written.</p>
+<p>Welcome to Western Maps! Western Maps is a geographic information application for
+browsing maps of Western's buildings.</p>
 
-<p>Other pages can be accessed from the sidebar on the left.</p>
+<p>Check out the subpages on the left sidebar for information on how to use the application.</p>
