Add more images to help page

--- a/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Points of Interest/Creating Points of Interest.html
+++ b/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Points of Interest/Creating Points of Interest.html
@@ -6,9 +6,11 @@
 
 <p>This creates a custom POI. Selecting a custom POI allows you to edit its name and description.
     Its location can be changed by dragging the POI icon on the map screen.</p>
+<img src="poiCustom.png">
 
 <p>Like the built-in POIs, custom POIs can also be <a href="Favorite%20Points%20of%20Interest.html">marked as favorite</a>.
     All custom POIs are placed in their own Custom layer, which can be toggled just like the other layers.
     Custom POIs are specific to your user, and will persist in between application sessions.</p>
 
 <p>To remove a custom POI, select it and click "Delete POI".</p>
+<img src="poiDelete.png">
