--- a/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Points of Interest/Favorite Points of Interest.html
+++ b/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Points of Interest/Favorite Points of Interest.html
@@ -4,6 +4,8 @@
 This will save the POI into the "Favorite POIs" list in the bottom-right of the map screen.
 Favorite POIs are accessible from any map, even if a different floor is selected.</p>
 
+<img src="poiFavorite.png">
+
 <p>Favorite POIs can be unmarked as favorite with the same checkbox.</p>
 
 <p>Like other data, POIs marked as favorite will persist between sessions.</p>
