--- a/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Points of Interest/Finding Points of Interest.html
+++ b/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Points of Interest/Finding Points of Interest.html
@@ -3,6 +3,7 @@
 <p>After choosing a map, many POIs will be available.</p>
 
 <p>POI icons will be visible on the map. Click on an icon to select it and view its data.</p>
+<img src="poiSelect.png">
 
 <p>Additionally, a list of all POIs on the current map can be found on the right. POIs
     are also selectable by clicking them from this list.</p>
