Tweak help pages and support macOS menu bar

--- a/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Accessing the App/Signing In.html
+++ b/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Accessing the App/Signing In.html
@@ -4,4 +4,4 @@
 <img src="signIn.png">
 
 <p>After signing in,
-  you'll be taken to the building selection screen, where you can choose a map to browse.</p>
+  you'll be taken to the building selection screen, where you can <a href="../Choosing%20a%20Map/index.html">choose a map to browse</a>.</p>
