Enlarge sidebar and fix wording inconsistency

--- a/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Accessing the App/Creating an Account.html
+++ b/src/main/resources/cs2212/westernmaps/help/Western Maps Help/Accessing the App/Creating an Account.html
@@ -7,4 +7,4 @@
 Then, click "Create Account".</p>
 <img src="createAccount.png">
 
-<p>If successful, you'll be taken back to the login screen where you can <a href="Signing%20In.html">log in to your new account</a>.</p>
+<p>If successful, you'll be taken back to the login screen where you can <a href="Signing%20In.html">sign in to your new account</a>.</p>
